# k2-discord-bot

./: .eslintrc.json  .prettierrc.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml
src/: const.ts  gazou.ts  index.ts  main.rs
