[package]
name = "k2-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.188"
serde_json = "1.0.105"
serenity = "0.11.6"
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread"]}
